# genesis

./: .env  .gitignore  m68k-elf.txt  meson.build
game/: game.S  make.sh  vdp.c
game_with_c/: game.S  linker.lds  make.sh  vdp.c
include/: linker.lds  make.sh  md.h
include/md/: macro.h  md.h  vdp.h
mdcksum/: Makefile  main.c
newgame/: main.c  meson.build  start.S
